mikec/tests/PASS/semantic/92.mc
int a = 0;
void main(){
	a = 0;
}

void func1(int a){
	a = 'a';
	
}
