mikec/tests/FAIL/semantic/test-scope-block1.mc
void main(){
	int a = 0;
	{
		char a = 'a';
	}
}